Footer section gap solved

--- a/History/history.css
+++ b/History/history.css
@@ -102,9 +102,12 @@
 .footer {
   background-color: var(--secund-bg-color);
   width: 100%;
-  height: 100vh;
+  height: auto !important;
+  min-height: unset !important;
   position: absolute;
   border-top-left-radius: 125px;
+  margin-bottom: 0;
+  padding-bottom: 10px;
 }
 
 .logo-name-footer {
@@ -187,10 +190,8 @@ form input {
 
 .social-links {
   position: absolute;
-  right: 0;
-  margin-right: 230px;
-  bottom: 40rem;
   width: 150px;
+  margin-left: -2.2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
